Added endpoint for adding a review
