# storage/api-docs/api-docs.json
@@ -1011,6 +1011,73 @@
                 }
             }
         },
+        "/review/create": {
+            "post": {
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "Добавление отзыва",
+                "description": "Добавление отзыва",
+                "operationId": "9c80f52d1d5921f9fff121531b607efa",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string",
+                                                "example": "Название отзыва"
+                                            },
+                                            "text": {
+                                                "type": "string",
+                                                "example": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laborum magnam maxime quia ut? Aperiam autem"
+                                            },
+                                            "rating_value": {
+                                                "type": "integer",
+                                                "example": 1
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Успешно",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Review"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Заказ успешно создан."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
         "/review/{reviewId}": {
             "delete": {
                 "tags": [
